js/src/tests/test262/built-ins/Error/S15.11.1.1_A2_T1.js
var
err1
=
Error
(
'
msg1
'
)
;
if
(
!
Error
.
prototype
.
isPrototypeOf
(
err1
)
)
{
ERROR
(
'
#
1
:
var
err1
=
Error
(
\
'
msg1
\
'
)
;
Error
.
prototype
.
isPrototypeOf
(
err1
)
return
true
.
Actual
:
'
+
Error
.
prototype
.
isPrototypeOf
(
err1
)
)
;
}
reportCompare
(
0
0
)
;
